<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">

    <TextView
        android:id="@+id/addAbilityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:text="@string/skill"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:padding="20dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/addAbilityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_rectangle"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="#ffffff"
        android:hint="@string/skillExample"
        android:textColorHint="#66ffffff"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/addAbilityConfirmButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/add"
            android:background="@drawable/green_button"
            android:textColor="#ffffff"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/addAbilityCancelButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:background="@drawable/red_button2"
            android:textColor="#ffffff"
            android:layout_marginStart="5dp" />

    </LinearLayout>



</LinearLayout>