<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:background="@drawable/main_gradient">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:text="Dane Personalne"
            android:textStyle="bold"
            android:paddingBottom="15dp"/>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/man" />

        <Button
            android:id="@+id/chosePhotoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/choosePhoto"
            android:background="@drawable/orangebg"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/name"
            android:textColorHint="#87ffffff"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:background="@drawable/edit_text_rectangle"
            />

        <EditText
            android:id="@+id/surnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textColorHint="#87ffffff"
            android:background="@drawable/edit_text_rectangle"/>

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:maxLength="9"
            android:hint="@string/phoneNumber"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textColorHint="#87ffffff"
            android:background="@drawable/edit_text_rectangle"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:textAlignment="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#ffffff"
            android:textColorHint="#87ffffff"
            android:background="@drawable/edit_text_rectangle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:textAlignment="center"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/streetEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:inputType="textPostalAddress"
                android:layout_weight="1.75"
                android:hint="@string/street"
                android:background="@drawable/edit_text_rectangle"
                android:textColor="#ffffff"
                android:textColorHint="#87ffffff"
                android:layout_marginRight="5dp"/>

            <EditText
                android:id="@+id/houseNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/houseNumber"
                android:textAlignment="center"
                android:inputType="number"
                android:background="@drawable/edit_text_rectangle"
                android:textColor="#ffffff"
                android:textColorHint="#87ffffff"/>

            <EditText
                android:id="@+id/slashEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:textAlignment="center"
                android:text="/"
                android:editable="false"
                android:background="#00ffffff"
                android:textColor="#ffffff"
                />

            <EditText
                android:id="@+id/flatNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textAlignment="center"
                android:hint="@string/flatNumber"
                android:inputType="number"
                android:background="@drawable/edit_text_rectangle"
                android:textColor="#ffffff"
                android:textColorHint="#87ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/postCodeEditText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:hint="@string/postCode"
                android:maxLength="2"
                android:background="@drawable/edit_text_rectangle"
                android:textColor="#ffffff"
                android:textColorHint="#87ffffff"/>

            <EditText
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="4"
                android:editable="false"
                android:background="#00ffffff"
                android:text="-"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/postCodeEditText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:inputType="numberDecimal"
                android:ems="3"
                android:hint="@string/postCode2"
                android:maxLength="3"
                android:background="@drawable/edit_text_rectangle"
                android:layout_marginRight="5dp"
                android:textColor="#ffffff"
                android:textColorHint="#87ffffff"/>

            <EditText
                android:id="@+id/cityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="textPersonName"
                android:hint="@string/city"
                android:textAlignment="center"
                android:background="@drawable/edit_text_rectangle"
                android:textColor="#ffffff"
                android:textColorHint="#87ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/birthDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthDate"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="normal"
                android:paddingBottom="15dp"
                android:layout_weight="1"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <EditText
                    android:id="@+id/birthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="05/03/1998"
                    android:editable="false"
                    android:background="#00ffffff"
                    android:layout_centerVertical="true"
                    android:textSize="18sp"
                    android:textColor="#ffffff"
                    android:textColorHint="#87ffffff"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="#00ffffff"
                    android:id="@+id/dateButton"
                    android:src="@drawable/calendar"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>
        </LinearLayout>


        <EditText
            android:id="@+id/shortInfoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:hint="@string/shortInfo"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:background="@drawable/edit_text_rectangle"
            android:textColor="#ffffff"
            android:textColorHint="#87ffffff"/>

        <Button
            android:id="@+id/nextButtonMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginBottom="15dp"
            android:textAlignment="center"
            android:background="@drawable/bluebg"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</ScrollView>