<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:letterSpacing="0.05"
        android:text="@string/success"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:src="@drawable/success"
        android:scaleType="centerInside"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cvReady"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/closeSuccessButton"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_weight="0.6"
        android:padding="10dp"
        android:text="@string/close"
        android:background="@drawable/edit_text_rectangle"
        android:textColor="#ffffff"/>


</LinearLayout>