<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:background="@drawable/orange_gradient">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/addLifeEventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/skill"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:padding="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/addLifeEventTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:background="@drawable/edit_text_rectangle"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"
            android:hint="@string/title"
            android:textColorHint="#66ffffff"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

        <EditText
            android:id="@+id/addLifeEventDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rectangle"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="#ffffff"
            android:hint="@string/description"
            android:textColorHint="#66ffffff"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:inputType="textMultiLine"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/addLifeEventBeginDateButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:text="@string/beginDate"
                android:background="@drawable/bluebg"
                android:textColor="#ffffff"
                android:layout_marginEnd="5dp"
                />

            <TextView
                android:id="@+id/addLifeEventBeginDateTextView"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="-"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:background="@drawable/edit_text_rectangle"
                android:layout_marginStart="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/addLifeEventEndDateButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:text="@string/endDate"
                android:background="@drawable/bluebg"
                android:textColor="#ffffff"
                />


            <TextView
                android:id="@+id/addLifeEventEndDateTextView"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="-"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:background="@drawable/edit_text_rectangle"
                android:layout_marginStart="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"/>

            <Button
                android:id="@+id/addLifeEventConfirmButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/add"
                android:background="@drawable/green_button"
                android:textColor="#ffffff"
                android:layout_marginEnd="5dp" />

            <Button
                android:id="@+id/addLifeEventCancelButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:text="@string/cancel"
                android:background="@drawable/red_button2"
                android:textColor="#ffffff"
                android:layout_marginStart="5dp" />

        </LinearLayout>



    </LinearLayout>

</ScrollView>
