<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

        <EditText
            android:id="@+id/lifeEventTitleListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:inputType="textMultiLine"
            android:background="@drawable/frame"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/beginDateTextView"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/beginDate"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold"
            android:typeface="normal"
            android:layout_weight="1"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <EditText
                android:id="@+id/beginDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:textAlignment="center"
                android:editable="false"
                android:textSize="12sp"
                android:textColor="#ffffff"
                android:textColorHint="#87ffffff"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="#00ffffff"
                android:id="@+id/beginDateButtonListItem"
                android:src="@drawable/calendar"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/endDateTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/endDate"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold"
            android:typeface="normal"
            android:layout_weight="1"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <EditText
                android:id="@+id/endDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:background="#00ffffff"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="#ffffff"
                android:textColorHint="#87ffffff"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="#00ffffff"
                android:id="@+id/endDateButtonListItem"
                android:src="@drawable/calendar"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>
    </LinearLayout>


    <EditText
        android:id="@+id/descriptionLifeEventEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame"
        android:textSize="12sp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#87ffffff"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/listItemDeleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@drawable/red_button"
            android:text="@string/delete"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>


    </LinearLayout>


</LinearLayout>
